# ros2_usb2can_motor_controller

./: Readme.md  Readme.txt
include/: CanUsbDevice.h
install/: local_setup.sh  setup.sh
install/can_usb_driver/include/can_usb_driver/: can_usb_device.hpp
install/can_usb_driver/share/ament_index/resource_index/parent_prefix_path/: can_usb_driver
install/can_usb_driver/share/can_usb_driver/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/can_usb_driver/share/can_usb_driver/cmake/: ament_cmake_export_include_directories-extras.cmake  can_usb_driverConfig.cmake
install/motor_controller/include/motor_controller/: rs03_motor_parser.hpp
install/motor_controller/lib/motor_controller/: motor_node
install/motor_controller/share/ament_index/resource_index/package_run_dependencies/: motor_controller
install/motor_controller/share/ament_index/resource_index/parent_prefix_path/: motor_controller
install/motor_controller/share/motor_controller/: local_setup.sh  package.sh  package.xml
install/motor_controller/share/motor_controller/config/: devices.yaml  motors.yaml
install/motor_interfaces/include/motor_interfaces/motor_interfaces/msg/: motor_command.hpp  motor_control.h
install/motor_interfaces/include/motor_interfaces/msg/: motor_command.h  motor_command.hpp  motor_control.h  motor_control.hpp  motor_status.h  motor_status.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/motor_interfaces/include/motor_interfaces/msg/detail/: motor_command__builder.hpp  motor_command__functions.c  motor_command__functions.h  motor_command__rosidl_typesupport_fastrtps_c.h  motor_command__rosidl_typesupport_fastrtps_cpp.hpp  motor_command__rosidl_typesupport_introspection_c.h  motor_command__rosidl_typesupport_introspection_cpp.hpp  motor_command__struct.h  motor_command__struct.hpp  motor_command__traits.hpp  motor_command__type_support.h  motor_command__type_support.hpp  motor_control__builder.hpp  motor_control__functions.c  motor_control__functions.h  motor_control__rosidl_typesupport_fastrtps_c.h  motor_control__rosidl_typesupport_fastrtps_cpp.hpp  motor_control__rosidl_typesupport_introspection_c.h  motor_control__rosidl_typesupport_introspection_cpp.hpp  motor_control__struct.h  motor_control__struct.hpp  motor_control__traits.hpp  motor_control__type_support.h  motor_control__type_support.hpp  motor_status__builder.hpp  motor_status__functions.h  motor_status__rosidl_typesupport_fastrtps_c.h  motor_status__rosidl_typesupport_fastrtps_cpp.hpp  motor_status__rosidl_typesupport_introspection_c.h  motor_status__rosidl_typesupport_introspection_cpp.hpp  motor_status__struct.h  motor_status__struct.hpp  motor_status__traits.hpp  motor_status__type_support.c  motor_status__type_support.cpp  motor_status__type_support.h  motor_status__type_support.hpp
install/motor_interfaces/share/ament_index/resource_index/package_run_dependencies/: motor_interfaces
install/motor_interfaces/share/ament_index/resource_index/parent_prefix_path/: motor_interfaces
install/motor_interfaces/share/motor_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/motor_interfaces/share/motor_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  motor_interfacesConfig-version.cmake  motor_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/motor_interfaces/share/motor_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/motor_interfaces/share/motor_interfaces/msg/: MotorCommand.idl  MotorCommand.msg  MotorControl.idl  MotorControl.msg  MotorStatus.idl  MotorStatus.msg
log/: latest_build
src/: CanUsbDevice.cpp  motor_node.cpp
src/can_usb_driver/: CMakeLists.txt  package.xml
src/can_usb_driver/include/can_usb_driver/: can_usb_device.hpp
src/can_usb_driver/scripts/: bind_usbcan.py
src/can_usb_driver/src/: can_usb_device.cpp
src/motor_controller/: CMakeLists.txt  package.xml
src/motor_controller/config/: devices.yaml  motors.yaml
src/motor_controller/include/: motor_parser_base.hpp  rs03_motor_parser.hpp  rs03_parser.hpp
src/motor_controller/include/motor_controller/: motor_parser_base.hpp  rs03_motor_parser.hpp
src/motor_controller/launch/: motor_node.launch.py
src/motor_controller/src/: math_ops.cpp  motor_node.cpp  rs03_motor_parser.cpp  rs03_parser.cpp
src/motor_interfaces/: CMakeLists.txt
src/motor_interfaces/msg/: MotorCommand.msg  MotorControl.msg
(+35 files in other folders)
