<?xml version="1.0"?>
<package format="2">
  <name>motor_controller</name>
  <version>0.0.1</version>
  <description>Motor control node using CAN-USB interface and YAML configuration.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 通用依赖（编译、导出、运行均需要） -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>motor_interfaces</depend>
  <depend>can_usb_driver</depend>
  <depend>yaml-cpp</depend>

  <!-- 仅运行时需要的依赖 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 导出构建类型 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>